@@ -29,6 +29,7 @@
 #include "gnc-splash.h"
 #include "gnc-version.h"
 
+#define MARKUP_STRING "<span size='small'>%s</span>"
 
 static GtkWidget * splash = NULL;
 static GtkWidget * progress = NULL;
@@ -57,7 +58,7 @@ gnc_show_splash_screen (void)
   GtkWidget *vbox;
   GtkWidget *version;
   GtkWidget *separator;
-  gchar *ver_string;
+  gchar *ver_string, *markup;
 
   if (splash) return;
 
@@ -92,10 +93,17 @@ gnc_show_splash_screen (void)
 			       VERSION, GNUCASH_SVN_REV, GNUCASH_BUILD_DATE);
 #endif
 
-  version = gtk_label_new (ver_string);
+  version = gtk_label_new(NULL);
+  markup = g_markup_printf_escaped(MARKUP_STRING, ver_string);
+  gtk_label_set_markup(GTK_LABEL(version), markup);
+  g_free(markup);
   g_free(ver_string);
   separator = gtk_hseparator_new();
-  progress = gtk_label_new(_("Loading..."));
+
+  progress = gtk_label_new(NULL);
+  markup = g_markup_printf_escaped(MARKUP_STRING, _("Loading..."));
+  gtk_label_set_markup(GTK_LABEL(progress), markup);
+  g_free(markup);
 
   gtk_container_add (GTK_CONTAINER (frame), pixmap);
   gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 0);
@@ -127,9 +135,13 @@ gnc_destroy_splash_screen (void)
 void
 gnc_update_splash_screen (const gchar *string)
 {
+  gchar *markup;
+
   if (progress)
   {
-    gtk_label_set_text (GTK_LABEL(progress), string);
+    markup = g_markup_printf_escaped(MARKUP_STRING, string);
+    gtk_label_set_markup (GTK_LABEL(progress), markup);
+    g_free (markup);
 
     /* make sure new text is up */
     while (gtk_events_pending ())
